# version_management

./: CMakeLists.txt  version.sh
src/: main.cpp
version/: version.h
